thanos-with-tls-setup/minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: minio-ingress-rule
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
  - host: minio.thanos1.nadeemlabs.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-console
            port:
              number: 9001
